2007-03-20  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* EventLogger.cs: Add CountEvents.
	* MdiFormTest.cs: Added CloseTest.

2007-03-19  Gert Driesen  <drieseng@users.sourceforge.net>

	* RichBoxTest.cs: Disabled ReadOnly test until I can test it on linux.

2007-03-19  Gert Driesen  <drieseng@users.sourceforge.net>

	* RichBoxTest.cs: Enabled ReadOnly test.

2007-03-19  Gert Driesen  <drieseng@users.sourceforge.net>

	* PaintEventArgsTest.cs: Enabled tests for bug #78448 on 2.0 profile.

2007-03-19  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripTest.cs: Enable gert's DockSize test for bug #80762.

2007-03-19  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* FormHandleTest.cs: Create new forms at a few specific places + a few
	  more corner cases. No longer not working.
	* MdiFormHandleTest.cs: These tests are working now.
	* FormTest.cs: IsHandleCreated is working now, the parented tests are
	  not working.

2007-03-19  Everaldo Canuto  <everaldo@simios.org>

	* MenuItemTest.cs: Add test for OwnerDraw (#81182).

2007-03-19  Gert Driesen  <drieseng@users.sourceforge.net>

	* RichTextBoxTest.cs: Marked failing test NotWorking.

2007-03-19  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* ControlTest.cs: Added InvokeTestParentHandle.

2007-03-18  Gert Driesen  <drieseng@users.sourceforge.net>

	* RichTextBoxTest.cs: Added tests for ReadOnly effect on BackColor.
	* TextBoxTest.cs: Added tests for ReadOnly effect on BackColor.

2007-03-17  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* ComboBoxTest.cs: Added DataBindingTest.

2007-03-16  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* MdiFormTest.cs: Make TopLevelTest not working until the fix is ready
	  to get in.

2007-03-16  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* MdiFormTest.cs, ControlTest.cs: Remove a warning.

2007-03-16  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* ApplicationContextTest.cs: Added NotWorking test for nested
	  application contexts.