@@ -1,3 +1,8 @@
+2007-03-19  Carlos Alberto Cortez <calberto.cortez@gmail.com>
+
+	* ListViewItemTest.cs: Add test for BackColor, ForeColor,
+	UseItemStyleForSubItems.
+
 2007-03-20  Rolf Bjarne Kvinge <RKvinge@novell.com> 
 
 	* EventLogger.cs: Add CountEvents.
